# breeze-moderation-system

./: .gitignore  README.md  pyproject.toml
example_extensions/: basic_extension.py
example_extensions/handlers/: defaulthandler.py
images/: breeze2.kra
src/endstone_breeze/: breeze.py
src/endstone_breeze/resources/: config.yaml  types.pyi
src/endstone_breeze/resources/handlers/: __init__.pyi  default_handler.py
src/endstone_breeze/utils/: __init__.py  profanity_utils.py  words.py
